force-app/main/default/objects/Barcode_Scan_Event__e/Barcode_Scan_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used to receive scanned barcode data. App needs to be configured to send data to this platform event</description>
    <label>Barcode Scan Event</label>
    <pluralLabel>Barcode Scan Events</pluralLabel>
</CustomObject>