force-app/main/default/objects/Barcode_Scan_Event__e/fields/Barcode_Text__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Text__c</fullName>
    <description>Scanned barcode text</description>
    <label>Barcode Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>