force-app/main/default/objects/Barcode_Scan_Event__e/fields/Barcode_Type__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Type__c</fullName>
    <description>Type of barcode being scanned</description>
    <label>Barcode Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>