force-app/main/default/objects/Barcode_Scan_Event__e/fields/Scanned_Time__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Time__c</fullName>
    <description>Time on the mobile device when barcode was scanned</description>
    <label>Scanned Time</label>
    <type>DateTime</type>
</CustomField>