force-app/main/default/objects/Barcode_Scan_Event__e/fields/Scanned_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Scanned_User_Id__c</fullName>
    <description>Record Id of the user who scanned the barcode</description>
    <label>Scanned User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>